[project]
name = "image-recognisation"
version = "0.1.0"
description = "Image recognition app"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "streamlit",
    "numpy",
    "pandas",
    "pillow",
    "opencv-python-headless",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"